[package]
name = "gitu"
description = "A git client inspired by Magit"
version = "0.35.0"
edition = "2021"
license = "MIT"

[[bench]]
name = "show"
harness = false

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.16"
criterion = "0.7.0"
insta = "1.43.2"
unicode-width = "0.2.0"
temp-env = "0.3.6"

[profile.release]
strip = true

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = [
    "windows-sys",
] }
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
etcetera = "0.10.0"
figment = { version = "0.10.19", features = ["toml"] }
git-version = "0.3.9"
git2 = { version = "0.20.2", default-features = false }
itertools = "0.14.0"
log = "0.4.28"
nom = "7.1.3"
notify = "7.0.0"
serde = { version = "1.0.219", features = ["derive"] }
similar = { version = "2.7.0", features = ["unicode", "inline"] }
simple-logging = "2.0.2"
toml = "0.9.5"
tree-sitter = "=0.25.6"
tree-sitter-highlight = "=0.25.6"
tree-sitter-rust = "=0.24.0"
tree-sitter-toml-ng = "=0.7.0"
tree-sitter-javascript = "=0.23.1"
tree-sitter-c = "=0.24.1"
tree-sitter-json = "=0.24.8"
tree-sitter-cpp = "=0.23.4"
tree-sitter-ruby = "=0.23.1"
tree-sitter-haskell = "=0.23.1"
tree-sitter-go = "=0.23.4"
tree-sitter-c-sharp = "=0.23.1"
tree-sitter-python = "=0.23.6"
tree-sitter-typescript = "=0.23.2"
tree-sitter-bash = "=0.25.0"
tree-sitter-php = "=0.23.11"
tree-sitter-java = "=0.23.5"
tree-sitter-scala = "=0.23.4"
tree-sitter-ocaml = "=0.24.2"
tree-sitter-html = "=0.23.2"
tree-sitter-elixir = "=0.3.4"
regex = "1.11.2"
strip-ansi-escapes = "0.2.1"
unicode-segmentation = "1.12.0"
termwiz = "0.23.3"
ratatui = { version = "0.29.0", features = ["termwiz", "serde", "underline-color"], default-features = false }
cached = "0.56.0"
